# oss-health

./: .gitignore  docker-compose.yml  package.json  renovate.json
api/: .coverage  .env.test  Dockerfile  README.md  alembic.ini  configuration.py  conftest.py  conftest.py.old  database.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 03e4e6e7cb66_add_user_table.py  0b1adaba6815_add_repository_dependency_version_table.py  105d2b53c498_add_repository_table.py  142e721d7148_link_vulnerability_to_version.py  19ea01e48843_remove_unused_columns_on_repositories.py  30ae185fa647_create_users_table.py  4a4d201d5e00_remove_dependency_version_table.py  5b4e6d22b0ac_make_version_specific_to_a_dependency.py  6bf0ff096894_add_vulnerability_table.py  7095f5c0ef18_add_access_token_column_to_users_table.py  77118a438b4e_add_user_table.py  80f78b644553_remove_repository_dependency_table.py  83222855fffd_add_synced_at_column_to_users_table.py  83d4ffb8473c_add_scanned_date_column_to_repositories.py  8bae674e01e4_remove_unused_columns_on_users_table.py  c362a2813ad2_move_versions_to_own_table.py  c5864af6233f_add_repository_clone_url_column.py  d03f1b6980cd_add_additional_info_columns_to_.py  d1f018fd6b64_add_dependency_table.py
api/app/: configuration.py  database.py  main.py
api/app/auth/: github_oauth.py  jwt_utils.py
api/app/crud/: dependency.py  repository.py  repository_dependency_version.py  user.py  version.py  vulnerability.py
api/app/dependencies/: core.py
api/app/graphql/: resolvers.py  schema.py  types.py
api/app/models/: __init__.py  dependency.py  dependency_vulnerability.py  relationships.py  repository.py  repository_dependency.py  user.py  version.py  version_vulnerability.py  vulnerability.py
api/app/parsers/: __init__.py  base.py  package_lock.py  pnpm_lock.py  pyproject_pep621.py  pyproject_toml.py  requirements_txt.py
api/app/scanners/: scanner.py
api/app/services/: osv_api.py  scanner.py
api/app/utils/: chunking.py  loggin.py
api/auth/: github_oauth.py  jwt_utils.py
api/crud/: user.py
api/dependencies/: core.py
api/models/: __init__.py  user.py
api/tests/auth/: test_jwt_utils.py
api/tests/crud/: test_repository.py  test_repository_dependency_version.py  test_user.py  test_vulnerability.py
api/tests/graphql/: test_resolvers.py
api/tests/parsers/: test_parse_package_lock.py  test_parse_pnpm_lock.py  test_parse_pyproject_pep621.py  test_parse_pyproject_toml.py  test_parse_requirements_txt.py
api/tests/services/: test_osv_api.py  test_scanner.py
app/: .env.test  Dockerfile  README.md  celerybeat-schedule.db  conftest.py  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 19ea01e48843_remove_unused_columns_on_repositories.py  1f0271d16689_add_url_fetch_failure_and_reason.py  2a4b2566e2a9_update_repository_table_columns_to_more_.py  3dc09bffd5da_add_status_column_to_dependencies_and_.py  49823a158fb2_add_github_detail_columns_to_dependency_.py  4a4d201d5e00_remove_dependency_version_table.py  77118a438b4e_add_user_table.py  77abd35aa613_add_dependency_repository_table.py  83d4ffb8473c_add_scanned_date_column_to_repositories.py  ac9be663ac69_add_status_column_to_dependencies_and_.py  c362a2813ad2_move_versions_to_own_table.py  d1f018fd6b64_add_dependency_table.py
app/api/: main.py
app/api/auth/: github_oauth.py  jwt_utils.py
app/api/dependencies/: core.py
app/api/graphql/: inputs.py  resolvers.py  schema.py  types.py
app/config/: settings.py
app/core/: database.py
app/core/crud/: dependency.py  repository.py  repository_dependency_version.py  user.py  utils.py  vulnerability.py
app/core/dependency_repository_resolvers/: base.py  npm.py  pypi.py
app/core/models/: __init__.py  dependency.py  repository.py  (+1 more)
app/worker/: __init__.py  celery_worker.py  db_helpers.py  scheduler.py
(+199 files in other folders)
